--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -11,6 +11,9 @@ img {
   width: 600px;
 }
 
+a{
+  color: grey;
+}
 button {
   font-family: Roboto, sans-serif;
   border: none;
@@ -23,4 +26,41 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+a{
+  text-decoration: none;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+
+.left-links, .right-links{
+  display: flex;
+  gap: 16px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background: lightgrey;
+  padding: 8px;
 }
