--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -7,8 +7,19 @@ html {
 .container {
   text-align: center;
   height: 100%;
+  width: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 100px 100px 500px 100px;
+  grid-template-columns: 200px 800px;
+  grid-template-areas:
+  "head head"
+  "side navi"
+  "side arti"
+  "foot foot";
+  gap: 15px;
+
 }
 
 .container div {
@@ -22,22 +33,27 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: head;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: side;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: navi;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: arti;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: foot;
 }
 
 .article p {
